--- a/css/lsn2.html
+++ b/css/lsn2.html
@@ -29,7 +29,7 @@
         </div>
     <div class = "center">
       <p>
-          <a href="page2.html" class = "button" target="_self"
+          <a href="qs1.html" class = "button" target="_self"
             ><button >Next</button></a>
         </p>
       </div>
