--- a/css/lsn4.html
+++ b/css/lsn4.html
@@ -16,7 +16,7 @@
 
     <div class = "center">
       <p>
-          <a href="page4.html" class = "button" target="_self"
+          <a href="qs3.html" class = "button" target="_self"
             ><button >Next</button></a>
         </p>
       </div>
