--- a/css/lsn2.html
+++ b/css/lsn2.html
@@ -20,11 +20,11 @@
               <button class ="btn" onclick="document.getElementById('CB').style.display='block'">Corporate Bonds</button>
               <p id="CB" style="display:none">Corporate Bonds are bonds issued by corporations to fund their ongoing operations. These type of bonds are low risk.</p>
               <button class ="btn"onclick="document.getElementById('TB').style.display='block'">Treasury Bills</button>
-              <p id="TB" style="display:none">Corporate Bonds are bonds issued by corporations to fund their ongoing operations. These type of bonds are low risk.</p>
+              <p id="TB" style="display:none">A Treasury Bill or a T-Bill  is a short-term government debt obligation backed by the Treasury Department with a maturity of one year or less. </p>
               <button class ="btn" onclick="document.getElementById('JB').style.display='block'">Junk Bonds</button>
-              <p id="JB" style="display:none">Corporate Bonds are bonds issued by corporations to fund their ongoing operations. These type of bonds are low risk.</p>
+              <p id="JB" style="display:none">A junk bond is a high-yield bond, meaning that you will earn more money from it, but it is higher risk.</p>
               <button class ="btn" onclick="document.getElementById('MB').style.display='block'">Municipal Bonds</button>
-              <p id="MB" style="display:none">Corporate Bonds are bonds issued by corporations to fund their ongoing operations. These type of bonds are low risk.</p>
+              <p id="MB" style="display:none">Corporate Bonds are bonds bond issued by state or local governments.</p>
 
         </div>
     <div class = "center">
