--- a/final/lsn2.html
+++ b/final/lsn2.html
@@ -30,7 +30,7 @@
     <div class = "center">
       <p>
           <a href="qs1.html" class = "button" target="_self"
-            ><button >Next</button></a>
+            ><button >NEXT</button></a>
         </p>
       </div>
 
