--- a/final/lsn3.html
+++ b/final/lsn3.html
@@ -7,7 +7,7 @@
   <body>
 <script src = "main.js"></script>
 
-<div class = "center"><h2>Guaranteed Investment Certificates</h2></div>
+<div class = "center"><h2>Stocks</h2></div>
   <p>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ultricies magna ex, vitae malesuada erat ultricies a. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Morbi scelerisque iaculis sapien, eu interdum velit tristique vitae. Fusce eu posuere felis, ut tincidunt dolor. Nunc hendrerit dapibus convallis. In elementum nunc quis ex laoreet tincidunt. Nulla rutrum, risus eu pulvinar ullamcorper, orci nisi rutrum purus, vitae maximus dui velit quis lectus.
   </p>
@@ -16,8 +16,8 @@
 
     <div class = "center">
       <p>
-          <a href="final.html" class = "button" target="_self"
-            ><button >Next</button></a>
+          <a href="qs2.html" class = "button" target="_self"
+            ><button >NEXT</button></a>
         </p>
       </div>
 
