--- a/final/page3.html
+++ b/final/page3.html
@@ -32,8 +32,8 @@
 
   <p>
 <br><br><br><br><br><br>
-    <a href="lsn5.html" target="_self"
-      ><button >Next</button></a
+    <a href="lsn4.html" target="_self"
+      ><button >NEXT</button></a
     >
   </p>
 
