--- a/final/page4.html
+++ b/final/page4.html
@@ -8,18 +8,18 @@
     <script src = "main.js"></script>
     <div class = "center">
         <h3>Check Your Understanding</h3>
-        <p>What is a dividend?</p>
+        <p>What is not a bond?</p>
     </div>
 <div class = "container">
         <form id = "myForm">
           <input type ="radio"  id = "A" name = "answer" value = "Choice A" onclick="document.getElementById('wrong').style.display='block'">
-          <label for "A">A.Choice A</label><br>
+          <label for "A">A.Treasury-Bill</label><br>
           <input type ="radio" onclick="document.getElementById('wrong').style.display='block'"id = "B" name = "answer" value = "Choice B">
-          <label for "B">B. Choice B</label><br>
-          <input type ="radio" onclick="document.getElementById('wrong').style.display='block'" id = "C" name = "answer" value = "Choice C">
-          <label for "C">C. Choice C</label><br>
-          <input type ="radio" onclick="document.getElementById('right').style.display='block'" id = "D" name = "answer" value = "Choice D">
-          <label for "D">D. Choice D</label><br>
+          <label for "B">B. A fixed income security</label><br>
+          <input type ="radio" onclick="document.getElementById('right').style.display='block'" id = "C" name = "answer" value = "Choice C">
+          <label for "C">C. A share in a company</label><br>
+          <input type ="radio" onclick="document.getElementById('wrong').style.display='block'" id = "D" name = "answer" value = "Choice D">
+          <label for "D">D. Money lent to an institute</label><br>
           <p id="right" style="display:none">That's right!</p>
           <p id="wrong" style="display:none">Incorrect. The correct answer is C</p>
         </form>
@@ -27,10 +27,13 @@
 </div>
 
 <div class = "center">
-    <p>
+  <p id="right" style="display:none">That's right!</p>
+  <p id="wrong" style="display:none">Incorrect. The correct answer is C</p>
+
+  <p>
 <br><br><br><br><br><br>
-    <a href="lsn4.html" target="_self"
-      ><button >Next</button></a
+    <a href="lsn5.html" target="_self"
+      ><button >NEXT</button></a
     >
   </p>
 
