--- a/final/qs3.html
+++ b/final/qs3.html
@@ -32,7 +32,7 @@
   <p>
 <br><br><br><br><br><br>
     <a href="lsn5.html" target="_self"
-      ><button >Next</button></a
+      ><button >NEXT</button></a
     >
   </p>
 
