--- a/final/index.html
+++ b/final/index.html
@@ -26,7 +26,7 @@
 <div class = "center">
   <p>
       <a href="lsn2.html" class = "button" target="_self"
-        ><button >Next</button></a>
+        ><button >NEXT</button></a>
     </p>
   </div>
 
