--- a/final/qs1.html
+++ b/final/qs1.html
@@ -33,7 +33,7 @@
   <p>
 <br><br><br><br><br><br>
     <a href="lsn3.html" target="_self"
-      ><button >Next</button></a
+      ><button >NEXT</button></a
     >
   </p>
 
