--- a/final/fb6.html
+++ b/final/fb6.html
@@ -17,7 +17,7 @@
     <body>
         <div class="container mt-sm-5 my-1">
             <div class="ml-sm-5 pl-sm-5 pt-2">
-                <div class="py-2 h5 text-center"><b>-------QUESTION-------</b>
+                <div class="py-2 h5 text-center"><b>If you were able to earn interest at 3% and you started with $100, how much would you have after 3 years?</b>
         
                 
                 <div class="mt-5 text-center" id="blank"> 
